# algebraic-query

./: CHANGELOG.md  LICENSE  Labels.cabal  algebraic-query.cabal
src/: Attribute.hs  Backend.hs  Column.hs  FieldSelectors.hs  SQL.hs  Selector.hs  SqlSelector.hs  Table.hs
src/Backend/: Compiles.hs  Internal.hs
src/Column/: Attribute.hs
src/Control/Carrier/: Query.hs
src/Control/Effect/: Query.hs
src/Control/Effect/Query/: Internal.hs  Labelled.hs
src/Database/: Algebraic.hs
src/Database/Algebraic/: Backend.hs  Column.hs  SQL.hs  Table.hs
src/Database/Algebraic/Backend/: Internal.hs  SQLite.hs
src/Database/Algebraic/Column/: Attribute.hs  Generic.hs  Type.hs
src/Database/Algebraic/Compiler/: Combinators.hs  Create.hs  Insert.hs  Type.hs
src/Database/Algebraic/SQL/: Exp.hs
src/Database/Algebraic/SQL/Exp/: AST.hs
src/Database/Algebraic/Table/: Selector.hs  Type.hs
src/SQL/: Exp.hs
src/SQL/Exp/: AST.hs
src/Table/: Generic.hs  Selector.hs
test/: Test.hs
test/Test/: Table.hs
