cabal-version: 2.2

name:         algebraic-query
version:      0.1.0.0
synopsis:     SQL specific language built on top of fused-effects
-- bug-reports:
license:      BSD-3-Clause
license-file: LICENSE
author:       riz0id
maintainer:   jacob@z-tech.org
copyright:    Copyright (C) 2012-2016 Edward A. Kmett
category:     Control, Database, SQL
build-type:   Simple

extra-source-files:
  LICENSES
  CHANGELOG.md

description:
  SQL specific language built on top of fused-effects.

tested-with:
  GHC == 8.8.3

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies

executable Labels
  import:         common
  main-is:        Main.hs
  hs-source-dirs: src

  other-modules:
    --  FieldSelectors
      Selectors
    , Table
    , Table.Generic
    , Table.Types
    , Types

  build-depends:
      base          >= 4.9 && < 4.15
    , fused-effects
    , fused-effects-lens
    , microlens
    , microlens-th
    , mtl
    , text

test-suite test
  import:  common
  type:    exitcode-stdio-1.0
  main-is: README.lhs

  build-depends:
    , base
    , fused-effects