cabal-version: 2.2

name:         algebraic-query
version:      0.1.0.0
synopsis:     SQL specific language built on top of fused-effects
-- bug-reports:
license:      BSD-3-Clause
license-file: LICENSE
author:       riz0id
maintainer:   jacob@z-tech.org
copyright:    Copyright (C) 2012-2016 Edward A. Kmett
category:     Control, Database, SQL
build-type:   Simple

extra-source-files:
  LICENSES
  CHANGELOG.md

description:
  SQL specific language built on top of fused-effects.

tested-with:
  GHC == 8.8.3

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies

library
  import:         common
  main-is:        Main.hs
  hs-source-dirs: src

  exposed-modules:
      Backend
    , Backend.Internal
    , Column
    , Column.Attribute
    , Control.Carrier.Query
    , Control.Effect.Query
    , Control.Effect.Query.Labelled
    , SQL
    , SQL.Exp
    , Table
    , Table.Selector

  other-modules:
      Control.Effect.Query.Internal
    , SQL.Exp.AST

  build-depends:
      base          >= 4.9 && < 4.15
    , dlist
    , fused-effects
    , fused-effects-lens
    , microlens
    , microlens-th
    , text
    , unordered-containers

test-suite test
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs

  build-depends:
    , algebraic-query
    , base
    , dlist
    , fused-effects
    , generic-lens
    , text